--- a/index.html
+++ b/index.html
@@ -4,27 +4,24 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-   
   <title>
     DS9 Quiz
   </title>
-  
   <link rel="stylesheet" type="text/css" href="main.css" />
   <link rel="stylesheet" type="text/css" href="grid.css" />
 </head>
 
 <body>
-  <header role="banner">
-    <h1>Star Trek : Deep Space Nine</h1>
-    <h2>Quiz</h2>
-  </header>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="index.js"></script>
   <main role="main">
     <div class="row">
       <div class="col">
         <section class="start-quiz-container" role="region">
-          
+          <header role="banner">
+            <h1>Star Trek : Deep Space Nice</h1>
+            <h2>Quiz</h2>
+          </header>
           <label for="start-quiz"> Ready to begin?</label>
 
           <button id="quizStart" type="submit">Start Quiz</button>
